@@ -115,7 +115,7 @@ public class ScriptableMap extends NativeJavaObject {
         if (map == null) {
             return super.get(index, start);
         }
-        return getInternal(new Integer(index));
+        return getInternal(Integer.valueOf(index));
     }
 
     private Object getInternal(Object key) {
@@ -138,7 +138,7 @@ public class ScriptableMap extends NativeJavaObject {
         if (map == null) {
             return super.has(index, start);
         } else {
-            return map.containsKey(new Integer(index));
+            return map.containsKey(Integer.valueOf(index));
         }
     }
 
@@ -154,7 +154,7 @@ public class ScriptableMap extends NativeJavaObject {
         if (map == null) {
              super.put(index, start, value);
          } else {
-             putInternal(new Integer(index), value);
+             putInternal(Integer.valueOf(index), value);
         }
     }
 
@@ -183,7 +183,7 @@ public class ScriptableMap extends NativeJavaObject {
     public void delete(int index) {
         if (map != null) {
             try {
-                map.remove(new Integer(index));
+                map.remove(Integer.valueOf(index));
             } catch (RuntimeException e) {
                 Context.throwAsScriptRuntimeEx(e);
             }
